fix jumping input fields

--- a/public/styling.css
+++ b/public/styling.css
@@ -96,7 +96,6 @@ body {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    margin: 1px;
     font-size: 16px;
     background-color: #f8f8f8;
     height: 2.5rem;
@@ -107,7 +106,7 @@ body {
 
     &:focus {
         outline: none;
-        margin: 0;
+        padding: 9px;
         border: 2px solid var(--color-primary-4);
     }
 }
